# greyzone

./: .gitignore  CLAUDE.md  Makefile  README.md
.claude/: settings.json  settings.local.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy.yml
apps/ai-agent/: package-lock.json  package.json  tsconfig.json
apps/ai-agent/src/: config.ts  index.ts
apps/api/: alembic.ini  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/app/: __init__.py  config.py  main.py
apps/web/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
apps/web/e2e/: canvas-check.spec.ts  gameplay-probe.spec.ts  login.spec.ts  (+4 more)
docs/: ai-agent-spec.md  api-spec.md  architecture.md  data-model.md  multi-user-spec.md  player-guide.md  product-spec.md  scenario-authoring-guide.md  simulation-spec.md  testing-strategy.md  whitepaper-ai-agent-comparison.md
docs/adr/: 001-rust-simulation-engine.md  002-fastapi-control-plane.md  003-event-sourcing.md  004-ai-bounded-tools.md  005-multi-user-first.md
docs/bootstrap/: acceptance-checklist.md  init-repo-prompt.md
infra/dev/: deploy.sh  greyzone-ai.service  greyzone-api.service  nginx-greyzone
infra/grafana/: greyzone-dashboard.json  setup.sh
infra/monitoring/: apply.sh  greyzone-alerts.yml  greyzone-dashboard.json  prometheus-scrape-job.yml
services/sim-engine/: Cargo.toml
services/sim-engine/src/: action.rs  actor.rs  coupling.rs  domain.rs  engine.rs  errors.rs  events.rs  lib.rs  main.rs  phase.rs  protocol.rs  scenario.rs
(+214 files in other folders)
